1mDVS_final/workspace/.metadata/.plugins/org.eclipse.cdt.ui/RunningAverage_CGen.build.log
17:23:04 **** Rebuild of configuration Debug for project RunningAverage_CGen ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\RunningAverageTest_PC_Automatic.o ..\src\RunningAverageTest_PC_Automatic.c 
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\SystemLib_Delay_DelayValue_Impl.o ..\src\SystemLib_Delay_DelayValue_Impl.c 
In file included from ../include/esdl.h:20,
                 from ..\src\globalH.h:9,
                 from ..\src\RunningAverageTest_PC_Automatic.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\components_RunningAverageTest_Automatic.o ..\src\components_RunningAverageTest_Automatic.c 
In file included from ../include/esdl.h:20,
                 from ..\src\globalH.h:9,
                 from ..\src\SystemLib_Delay_DelayValue_Impl.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\components_RunningAverage_Automatic.o ..\src\components_RunningAverage_Automatic.c 
In file included from ../include/esdl.h:20,
                 from ..\src\globalH.h:9,
                 from ..\src\components_RunningAverageTest_Automatic.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
Info: Parallel threads used: 3

17:23:04 Build Failed. 3 errors, 0 warnings. (took 233ms)

